src/objects/ContApplAssoc__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Governing_End_Date__c</fullName>
        <formula>Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Governing End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Available_Countries_Condense__c</fullName>
        <label>Application Available Countries Condense</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application_Legal_Countries_Condensed__c</fullName>
        <label>Application Legal Countries Condensed</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>R00N40000001hQGjEAM</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BLUR_Type__c</fullName>
        <description>&quot;pass-thru&quot; field, from Contracts to Application</description>
        <formula>text(Contract__r.BLUR_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BLUR_Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLUR_contract__c</fullName>
        <description>pass-thru of the &quot;Blur Contract?&quot; field... from contract object to application object</description>
        <formula>text(Contract__r.BLUR_Contract__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;pass-thru&quot; field.. only Admins can see this field</inlineHelpText>
        <label>BLUR_contract</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BLUR_release__c</fullName>
        <description>&quot;pass-thru&quot; field, from Contracts to Application</description>
        <formula>text(Contract__r.BLUR_Release__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;pass-thru&quot; field, from Contracts to Application</inlineHelpText>
        <label>BLUR_release</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNameOnCA__c</fullName>
        <formula>If(Governing_End_Date__c = True, Contract__r.Name,&quot;not gov end date&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractNameOnCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumberOnCA__c</fullName>
        <formula>If(Governing_End_Date__c = True, Contract__r.ContractNumber,&quot;not gov end date&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractNumberOnCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractOwnerOnCA__c</fullName>
        <formula>IF(Governing_End_Date__c=TRUE, Contract__r.OwnerId, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractOwnerOnCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractPhaseonCA__c</fullName>
        <formula>IF( Governing_End_Date__c = TRUE,
(if(ispickval(Contract__r.Contract_Phase__c, &quot;Execution and Processing&quot;), &quot;Execution and Processing&quot;,
(if(ispickval(Contract__r.Contract_Phase__c,&quot;Term Sheet&quot;), &quot;Term Sheet&quot;,
(if(ispickval(Contract__r.Contract_Phase__c,&quot;2 - LRB Phase&quot;)  , &quot;2 - LRB Phase&quot;,
(if(ispickval(Contract__r.Contract_Phase__c,&quot;Initial Legal Draft&quot;), &quot;Initial Legal Draft&quot;,
(if(ispickval(Contract__r.Contract_Phase__c,&quot;Redlines/Negotiations&quot;), &quot;Redlines/Negotiations&quot;,
(if(ispickval(Contract__r.Contract_Phase__c,&quot;Approvals&quot;), &quot;Approvals&quot;,
(if(ispickval(Contract__r.Contract_Phase__c,&quot;Dropped&quot;), &quot;Dropped&quot;,
(if(ispickval(Contract__r.Contract_Phase__c,&quot;Investigating&quot;), &quot;Investigating&quot;,
&quot;&quot;)))))))))))))))),
&quot;not gov end date&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractPhaseonCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractStatusonCA__c</fullName>
        <formula>IF( Governing_End_Date__c = TRUE,
(if(ispickval(Contract__r.Contract_Status__c, &quot;NOT DRAFTED&quot;), &quot;NOT DRAFTED&quot;,
(if(ispickval(Contract__r.Contract_Status__c,&quot;DRAFT&quot;), &quot;DRAFT&quot;,
(if(ispickval(Contract__r.Contract_Status__c,&quot;Fully Executed&quot;), &quot;Fully Executed&quot;,
(if(ispickval(Contract__r.Contract_Status__c,&quot;Dropped&quot;), &quot;Dropped&quot;,
(if(ispickval(Contract__r.Contract_Status__c,&quot;Terminated&quot;), &quot;Terminated&quot;,
&quot;&quot;)))))))))),
&quot;not gov end date&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ContractStatusonCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Application_External_Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Contract_Application External Unique ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>Contract__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Rate_Based_Royalty_Table__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Rate Based Royalty Table</label>
        <referenceTo>Contract_Rate_Based_Royalty__c</referenceTo>
        <relationshipLabel>Contract Applications</relationshipLabel>
        <relationshipName>Contract_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>R00N40000001hQGiEAM</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DecisionOnCA__c</fullName>
        <formula>TEXT( Contract__r.LRB_Final_Deal_Review_Decision__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DecisionOnCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Governing_End_Date__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This Contract governs the end date of this application for contractual coverage.</description>
        <label>Governing End Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LRBApprovedDeviceOnCA__c</fullName>
        <formula>LEFT(Contract__r.LRB_Approved_Device__c, 100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LRBApprovedDeviceOnCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LRBApprovedRegionOnCA__c</fullName>
        <formula>Contract__r.LRB_Approved_Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LRBApprovedRegionOnCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LRBPipelineIDOnCA__c</fullName>
        <formula>Contract__r.LRB_Pipeline_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LRBPipelineIDOnCA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legally_Shippable__c</fullName>
        <label>Legally Shippable</label>
        <length>30000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Devices_App_is_on__c</fullName>
        <description>From the applications object</description>
        <formula>Application__r.of_Devices__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>From the applications object</inlineHelpText>
        <label>Number of Devices App is on</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Temp__c</fullName>
        <label>Temp</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Contract Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ContApp-{0000}</displayFormat>
        <label>Contract Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>